--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <section id="Glory">
         <div class="Glory container">
             <div class="Glory-left">
-                <div class="Glory-image"><img src="PA.jpg" alt="Pradhan Acharya"></div>
+                <div class="Glory-image"><img src="https://github.com/MihirManas/saraswati/blob/main/PA.jpg" alt="Pradhan Acharya"></div>
             </div>
             <div class="Glory-right">
                 <h1 id="section-title">Mr. Haraprasad <br><span>Acharya</span> </h1>
