--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="/logo.png">
     <title>Saraswati Sishu Bidya Bhaban</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Salsa&display=swap" rel="stylesheet">
@@ -75,7 +75,7 @@
     <section id="Glory">
         <div class="Glory container">
             <div class="Glory-left">
-                <div class="Glory-image"><img src="./PA.jpg" alt="Pradhan Acharya"></div>
+                <div class="Glory-image"><img src="/PA.jpg" alt="Image of our pradhan acharya"></div>
             </div>
             <div class="Glory-right">
                 <h1 id="section-title">Mr. Haraprasad <br><span>Acharya</span> </h1>
