--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <ul>
                     <li><a href="#Home">Home</a></li>
                     <li><a href="#Academics">Academics</a></li>
-                    <li><a href="#Glory">HM's talk</a></li>
+                    <li><a href="#Glory">HM's Talk</a></li>
                     <li><a href="#image">Our Legacy</a></li>
                     <li><a href="#Contact">Contact Us</a></li>
                 </ul>
